Add support for setting the time stamp type for a capture.
Based on a patch from Scott Mcmillan <scott.a.mcmillan@intel.com>.

(Second part of the commit.)

--- a/.gitignore
+++ b/.gitignore
@@ -19,13 +19,16 @@ pcap-config
 pcap-filter.manmisc
 pcap-linktype.manmisc
 pcap-savefile.manfile
+pcap-tstamp.manmisc
 pcap.3pcap
 pcap_compile.3pcap
 pcap_datalink.3pcap
 pcap_dump_open.3pcap
 pcap_list_datalinks.3pcap
+pcap_list_tstamp_types.3pcap
 pcap_open_dead.3pcap
 pcap_open_offline.3pcap
+pcap_set_tstamp_type.3pcap
 scanner.c
 scanner.h
 selpolltest
