--- a/configure.in
+++ b/configure.in
@@ -1361,7 +1361,19 @@ linux*)
        fi
        AC_DEFINE_UNQUOTED(LINUX_USB_MON_DEV, "/dev/$ac_usb_dev_name", [path for device for USB sniffing])
        AC_MSG_NOTICE(Device for USB sniffing is /dev/$ac_usb_dev_name)
-       AC_CHECK_HEADERS(linux/usbdevice_fs.h)
+       #
+       # Do we have a version of <linux/compiler.h> available?
+       # If so, we might need it for <linux/usbdevice_fs.h>.
+       #
+       AC_CHECK_HEADERS(linux/compiler.h)
+       if test "$ac_cv_header_linux_compiler_h" = yes; then
+         #
+	 # Yes - include it when testing for <linux/usbdevice_fs.h>.
+	 #
+         AC_CHECK_HEADERS(linux/usbdevice_fs.h,,,[#include <linux/compiler.h>])
+       else
+         AC_CHECK_HEADERS(linux/usbdevice_fs.h)
+       fi
        if test "$ac_cv_header_linux_usbdevice_fs_h" = yes; then
          #
          # OK, does it define bRequestType?  Older versions of the kernel
