Use config.status to generate pcap-config.
Rather than use a custom sed script to replace things in pcap-config,
use the already existing config.status script.  This keeps people from
having to update the Makefile.in every time they want to add a new var
to the file.

Also, clean up the pcap-config.in script a bit to set local vars at the
top of the file and then refer to those rather than replacing all things
through out.  This makes it easier to tweak on the fly as there is only
line to change rather than trying and figure out all the locations.

Reviewed-By: Guy Harris <guy@alum.mit.edu>

--- a/Makefile.in
+++ b/Makefile.in
@@ -490,11 +490,7 @@ bpf_filter.o: bpf_filter.c
 #
 pcap-config: $(srcdir)/pcap-config.in
 	@rm -f $@ $@.tmp
-	sed -e 's|@includedir[@]|$(includedir)|g' \
-	    -e 's|@libdir[@]|$(libdir)|g' \
-	    -e 's|@LIBS[@]|$(LIBS)|g' \
-	    -e 's|@V_RPATH_OPT[@]|$(V_RPATH_OPT)|g' \
-	    $(srcdir)/pcap-config.in >$@.tmp
+	./config.status --file=$@.tmp:$<
 	mv $@.tmp $@
 	chmod a+x $@
 
