Some Makes, e.g. AIX Make, can't handle "--file=$@.tmp:$<".
Instead, explicitly replace $< with the dependency for that rule.

--- a/Makefile.in
+++ b/Makefile.in
@@ -479,7 +479,7 @@ bpf_filter.o: bpf_filter.c
 #
 pcap-config: $(srcdir)/pcap-config.in
 	@rm -f $@ $@.tmp
-	./config.status --file=$@.tmp:$<
+	./config.status --file=$@.tmp:$(srcdir)/pcap-config.in
 	mv $@.tmp $@
 	chmod a+x $@
 
