Quote the argument to AC_LIBOBJ(), so we can close a bug.
It doesn't make any difference with the version of autoconf on my
machine (2.61), but it means I no longer have to worry about the bug in
question.

--- a/configure.in
+++ b/configure.in
@@ -152,7 +152,7 @@ needsnprintf=no
 AC_CHECK_FUNCS(vsnprintf snprintf,,
 	[needsnprintf=yes])
 if test $needsnprintf = yes; then
-	AC_LIBOBJ(snprintf)
+	AC_LIBOBJ([snprintf])
 fi
 
 #
