Some forms of offloading mean we can't trust the MTU.
If we're doing segmentation/fragmentation offloading, or reassembly
offloading, we might see reassembled/un-{frag,seg}mented "packets"
bigger than the MTU, so don't shrink the ring buffer slot size.

--- a/config.h.in
+++ b/config.h.in
@@ -64,6 +64,9 @@
 /* Define to 1 if you have the <linux/compiler.h> header file. */
 #undef HAVE_LINUX_COMPILER_H
 
+/* Define to 1 if you have the <linux/ethtool.h> header file. */
+#undef HAVE_LINUX_ETHTOOL_H
+
 /* Define to 1 if you have the <linux/net_tstamp.h> header file. */
 #undef HAVE_LINUX_NET_TSTAMP_H
 
