--- a/config.h.in
+++ b/config.h.in
@@ -244,6 +244,9 @@
 /* target host supports CAN sniffing */
 #undef PCAP_SUPPORT_CAN
 
+/* target host supports netfilter sniffing */
+#undef PCAP_SUPPORT_NETFILTER
+
 /* target host supports USB sniffing */
 #undef PCAP_SUPPORT_USB
 
