--- a/configure.in
+++ b/configure.in
@@ -1311,6 +1311,21 @@ esac
 AC_SUBST(PCAP_SUPPORT_USB)
 AC_SUBST(USB_SRC)
 
+dnl check for netfilter sniffing support
+AC_MSG_CHECKING(for netfilter sniffing support)
+case "$host_os" in
+linux*)
+       AC_DEFINE(PCAP_SUPPORT_NETFILTER, 1, [target host supports netfilter sniffing])
+       NETFILTER_SRC=pcap-netfilter-linux.c
+       AC_MSG_RESULT(yes)
+       ;;
+*)
+       AC_MSG_RESULT(no)
+       ;;
+esac
+AC_SUBST(PCAP_SUPPORT_NETFILTER)
+AC_SUBST(NETFILTER_SRC)
+
 AC_ARG_ENABLE([bluetooth],
 [AC_HELP_STRING([--enable-bluetooth],[enable Bluetooth support @<:@default=yes, if support available@:>@])],
 ,enable_bluetooth=yes)
