--- a/configure.in
+++ b/configure.in
@@ -1328,6 +1328,7 @@ linux*)
 	AC_CACHE_VAL(ac_cv_netfilter_can_compile,
 	  AC_TRY_COMPILE([
 AC_INCLUDES_DEFAULT
+#include <sys/socket.h>
 #include <linux/types.h>
 
 #include <linux/netlink.h>
