Add a test for pcap_activate() on an open pcap_t failing as it should.

--- a/Makefile.in
+++ b/Makefile.in
@@ -137,6 +137,7 @@ TESTS_SRC = \
 	tests/findalldevstest.c \
 	tests/nonblocktest.c \
 	tests/opentest.c \
+	tests/reactivatetest.c \
 	tests/selpolltest.c
 
 GENHDR = \
