linux/ethtool.h requires linux/types.h.
In the configure script, when checking whether we have linux/ethtool.h,
include linux/types.h.

In pcap-linux.c, move a bunch of includes etc. later in the file after
linux/types.h is included.  Also, have only one include of
linux/sockios.h.

Don't do any of the ethtool-ioctl offloading checks unless at least one
of the checks is actually doable; this squelches a warning.

--- a/configure.in
+++ b/configure.in
@@ -465,7 +465,11 @@ linux)
 		])
 	fi
 
-	AC_CHECK_HEADERS(linux/ethtool.h)
+	AC_CHECK_HEADERS(linux/ethtool.h,,,
+	    [
+AC_INCLUDES_DEFAULT
+#include <linux/types.h>
+	    ])
 	AC_LBL_TPACKET_STATS
 	AC_LBL_LINUX_TPACKET_AUXDATA_TP_VLAN_TCI
 	;;
