Put declarations of pcap-netfilter-linux.c in pcap-netfilter-linux.h.
That way, the same declarations are used in the file that defines the
functions and the files that use them, so we actually do type checking.

--- a/Makefile.in
+++ b/Makefile.in
@@ -301,6 +301,7 @@ EXTRA_DIST = \
 	pcap-linux.c \
 	pcap-namedb.h \
 	pcap-netfilter-linux.c \
+	pcap-netfilter-linux.h \
 	pcap-nit.c \
 	pcap-null.c \
 	pcap-pf.c \
