If config.status changes, rebuild pcap-config.
The config.status script is used to generate pcap-config from
pcap-config.in, so if you've re-run the configure script and it's
produced different results, changing the config.status script,
pcap-config should be rebuilt.

--- a/Makefile.in
+++ b/Makefile.in
@@ -502,7 +502,7 @@ bpf_filter.o: bpf_filter.c
 #
 # Therefore, instead of using $<, we explicitly put in $(srcdir)/pcap-config.in.
 #
-pcap-config: $(srcdir)/pcap-config.in
+pcap-config: $(srcdir)/pcap-config.in ./config.status
 	@rm -f $@ $@.tmp
 	./config.status --file=$@.tmp:$(srcdir)/pcap-config.in
 	mv $@.tmp $@
