Support static only build
Introduce --disable-shared configure option.

This is relevant mostly for AIX, as current build system favor
the shared version over the static one without allowing proper
override.

--- a/configure.in
+++ b/configure.in
@@ -1224,6 +1224,10 @@ solaris*)
 	;;
 esac
 
+AC_ARG_ENABLE(shared,
+AC_HELP_STRING([--enable-shared],[build shared libraries @<:@default=yes, if support available@:>@]))
+test "x$enable_shared" = "xno" && DYEXT="none"
+
 AC_PROG_RANLIB
 AC_CHECK_TOOL([AR], [ar])
 
