--- a/Makefile.in
+++ b/Makefile.in
@@ -289,6 +289,8 @@ EXTRA_DIST = \
 	pcap-bt-linux.h \
 	pcap-can-linux.c \
 	pcap-can-linux.h \
+	pcap-canusb-linux.c \
+	pcap-canusb-linux.h \
 	pcap-config.in \
 	pcap-dag.c \
 	pcap-dag.h \
