--- a/configure.in
+++ b/configure.in
@@ -1347,11 +1347,14 @@ linux*)
 	  AC_TRY_COMPILE([
 AC_INCLUDES_DEFAULT
 #include <sys/socket.h>
+#include <netinet/in.h>
 #include <linux/types.h>
 
 #include <linux/netlink.h>
+#include <linux/netfilter.h>
 #include <linux/netfilter/nfnetlink.h>
-#include <linux/netfilter/nfnetlink_log.h>],
+#include <linux/netfilter/nfnetlink_log.h>
+#include <linux/netfilter/nfnetlink_queue.h>],
 	    [],
 	    ac_cv_netfilter_can_compile=yes,
 	    ac_cv_netfilter_can_compile=no))
