--- a/config.h.in
+++ b/config.h.in
@@ -211,6 +211,9 @@
 /* path for device for USB sniffing */
 #undef LINUX_USB_MON_DEV
 
+/* if we need a pcap_parse wrapper around yyparse */
+#undef NEED_YYPARSE_WRAPPER
+
 /* Define to 1 if netinet/ether.h declares `ether_hostton' */
 #undef NETINET_ETHER_H_DECLARES_ETHER_HOSTTON
 
