Rewrite the section on qualifiers a bit.
Don't have the tags on the paragraphs lead into the paragraphs; that
works somewhat OK if the tag and the paragraph are on the same line, but
doesn't work if they're on separate lines, as they might be if the tag
is too long, or if the man page is converted to HTML and the lists are
represented as definition lists.

--- a/pcap-filter.manmisc.in
+++ b/pcap-filter.manmisc.in
@@ -45,6 +45,7 @@ Primitives usually consist of an
 There are three
 different kinds of qualifier:
 .IP \fItype\fP
+.I type
 qualifiers say what kind of thing the id name or number refers to.
 Possible types are
 .BR host ,
@@ -58,6 +59,7 @@ qualifier,
 .B host
 is assumed.
 .IP \fIdir\fP
+.I dir
 qualifiers specify a particular transfer direction to and/or from
 .IR id .
 Possible directions are
@@ -93,6 +95,7 @@ and
 .B outbound
 qualifiers can be used to specify a desired direction.
 .IP \fIproto\fP
+.I proto
 qualifiers restrict the match to a particular protocol.
 Possible
 protos are:
