--- a/configure.in
+++ b/configure.in
@@ -443,6 +443,8 @@ linux)
 			LIBS="-lnl-genl-3 -lnl-3 $LIBS"
 			AC_DEFINE(HAVE_LIBNL,1,[if libnl exists])
 			AC_DEFINE(HAVE_LIBNL_3_x,1,[if libnl exists and is version 3.x])
+			AC_DEFINE(HAVE_LIBNL_NLE,1,[libnl has NLE_FAILURE])
+			AC_DEFINE(HAVE_LIBNL_SOCKETS,1,[libnl has new-style socket api])
 			have_any_nl="yes"
 		])
 
@@ -458,6 +460,8 @@ linux)
 				LIBS="-lnl-genl -lnl $LIBS"
 				AC_DEFINE(HAVE_LIBNL,1,[if libnl exists])
 				AC_DEFINE(HAVE_LIBNL_2_x,1,[if libnl exists and is version 2.x])
+				AC_DEFINE(HAVE_LIBNL_NLE,1,[libnl has NLE_FAILURE])
+				AC_DEFINE(HAVE_LIBNL_SOCKETS,1,[libnl has new-style socket api])
 				have_any_nl="yes"
 			])
 		fi
