Cope with Bluetooth API breakage in some Linux 3.x(?) kernel.
In the 2.6.32.4 kernel, struct sockaddr_hci has no hci_channel member.

In the 3.0.4 kernel, struct sockaddr_hci has an hci_channel member, and
it has to get set in order for binds of AF_BLUETOOTH/BTPROTO_HCI sockets
to work.

Cope with this API breakage by checking whether struct sockaddr_hci has
an hci_channel member and, if it does, set it to HCI_CHANNEL_RAW.

--- a/configure.in
+++ b/configure.in
@@ -1413,6 +1413,26 @@ if test "x$enable_bluetooth" != "xno" ; then
 		  AC_DEFINE(PCAP_SUPPORT_BT, 1, [target host supports Bluetooth sniffing])
 		  BT_SRC=pcap-bt-linux.c
 		  AC_MSG_NOTICE(Bluetooth sniffing is supported)
+
+		  #
+		  # OK, does struct sockaddr_hci have an hci_channel
+		  # member?
+		  #
+		  AC_MSG_CHECKING(if struct sockaddr_hci has hci_channel member)
+		  AC_CACHE_VAL(ac_cv_lbl_sockaddr_hci_has_hci_channel,
+		    AC_TRY_COMPILE(
+[
+#include <bluetooth/bluetooth.h>
+#include <bluetooth/hci.h>
+],
+		      [u_int i = sizeof(((struct sockaddr_hci *)0)->hci_channel)],
+		      ac_cv_lbl_sockaddr_hci_has_hci_channel=yes,
+		      ac_cv_lbl_sockaddr_hci_has_hci_channel=no))
+		    AC_MSG_RESULT($ac_cv_lbl_sockaddr_hci_has_hci_channel)
+		    if test $ac_cv_lbl_sockaddr_hci_has_hci_channel = yes ; then
+		      AC_DEFINE(SOCKADDR_HCI_HAS_HCI_CHANNEL,,
+			[if struct sockaddr_hci has hci_channel member])
+		    fi
 		],
 		AC_MSG_NOTICE(Bluetooth sniffing is not supported; install bluez-lib devel to enable it)
 		)
