--- a/config.h.in
+++ b/config.h.in
@@ -268,6 +268,9 @@
 /* include ACN support */
 #undef SITA
 
+/* if struct sockaddr_hci has hci_channel member */
+#undef SOCKADDR_HCI_HAS_HCI_CHANNEL
+
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
