--- a/configure.in
+++ b/configure.in
@@ -1498,7 +1498,7 @@ if test "x$enable_can" != "xno" ; then
 fi
 
 AC_ARG_ENABLE([dbus],
-[AC_HELP_STRING([--enable-can],[enable dbus support @<:@default=yes, if support available@:>@])],
+[AC_HELP_STRING([--enable-dbus],[enable D-Bus capture support @<:@default=yes, if support available@:>@])],
     [],
     [enable_dbus=yes])
 
