Fix D-Bus checks.
Check whether dbus-1 is installed before trying to get flags for it.
That way, if you don't have dbus-1 installed, you don't get pkg-config
errors printed.

Don't expect the shell to be able to run a command inside $() and have
the result expand to the standard output of that command; that's not a
feature present in all Bourne-compatible shells.  Use backquotes
instead.

If the user specified --enable-dbus, and dbus-1 wasn't found, fail -
they asked for D-Bus sniffing support, but we can't give it to them, so
let them know that they can't have what they want.  They either need to
install the package or stop specifying --enable-dbus.

--- a/configure.in
+++ b/configure.in
@@ -1506,9 +1506,9 @@ if test "x$enable_dbus" != "xno"; then
 	AC_CHECK_PROG([PKGCONFIG], [pkg-config], [pkg-config], [no])
 	if test "x$PKGCONFIG" != "xno"; then
 		AC_MSG_CHECKING([for D-Bus])
-		DBUS_LIBS=$($PKGCONFIG --libs dbus-1)
-		DBUS_CFLAGS=$($PKGCONFIG --cflags dbus-1)
-		if test "x$DBUS_LIBS" != "x" -o "x$DBUS_CFLAGS" != "x"; then
+		if "$PKGCONFIG" dbus-1; then
+			DBUS_LIBS=`"$PKGCONFIG" --libs dbus-1`
+			DBUS_CFLAGS=`"$PKGCONFIG" --cflags dbus-1`
 			AC_DEFINE(PCAP_SUPPORT_DBUS, 1, [support D-Bus sniffing])
 			AC_MSG_RESULT([yes])
 			DBUS_SRC=pcap-dbus.c
@@ -1516,6 +1516,7 @@ if test "x$enable_dbus" != "xno"; then
 			LIBS="$LIBS $DBUS_LIBS"
 		else
 			AC_MSG_RESULT([no])
+			AC_MSG_ERROR([--enable-dbus was given, but the dbus-1 package is not installed])
 		fi
 	fi
 	AC_SUBST(PCAP_SUPPORT_DBUS)
