--- a/configure.in
+++ b/configure.in
@@ -1500,7 +1500,7 @@ fi
 AC_ARG_ENABLE([dbus],
 [AC_HELP_STRING([--enable-dbus],[enable D-Bus capture support @<:@default=yes, if support available@:>@])],
     [],
-    [enable_dbus=yes])
+    [enable_dbus=ifavailable])
 
 if test "x$enable_dbus" != "xno"; then
 	AC_CHECK_PROG([PKGCONFIG], [pkg-config], [pkg-config], [no])
@@ -1516,7 +1516,9 @@ if test "x$enable_dbus" != "xno"; then
 			LIBS="$LIBS $DBUS_LIBS"
 		else
 			AC_MSG_RESULT([no])
-			AC_MSG_ERROR([--enable-dbus was given, but the dbus-1 package is not installed])
+			if test "x$enable_dbus" = "xyes"; then
+				AC_MSG_ERROR([--enable-dbus was given, but the dbus-1 package is not installed])
+			fi
 		fi
 	fi
 	AC_SUBST(PCAP_SUPPORT_DBUS)
