Add a pcap-dbus.h header and include it in pcap-dbus.c and pcap.c.
That way, we ensure that the same function prototypes are seen when
dbus_create() and dbus_findalldevs() are defined and when they're used.

Also, add pcap-dbus.c to the list of "extra" files in Makefile.in, so it
goes into the release tarball.

--- a/Makefile.in
+++ b/Makefile.in
@@ -296,6 +296,8 @@ EXTRA_DIST = \
 	pcap-config.in \
 	pcap-dag.c \
 	pcap-dag.h \
+	pcap-dbus.c \
+	pcap-dbus.h \
 	pcap-dlpi.c \
 	pcap-dos.c \
 	pcap-dos.h \
