Use "ln -s" to link man pages by default.
Use AC_PROG_LN_S to determine whether "ln -s" works and, if not, whether
"ln" works and set LN_S appropriately for a link command, and use that
(as documented in the autoconf man page) to give man pages multiple
names.  (As the documentation says, to only way to make $(LN_S) work
regardless of how it's set is to execute it in the target directory.)

--- a/configure.in
+++ b/configure.in
@@ -1258,6 +1258,9 @@ test "x$enable_shared" = "xno" && DYEXT="none"
 AC_PROG_RANLIB
 AC_CHECK_TOOL([AR], [ar])
 
+AC_PROG_LN_S
+AC_SUBST(LN_S)
+
 AC_LBL_DEVEL(V_CCOPT)
 
 AC_LBL_SOCKADDR_SA_LEN
