--- a/configure.in
+++ b/configure.in
@@ -1510,6 +1510,7 @@ if test "x$enable_dbus" != "xno"; then
 	if test "x$PKGCONFIG" != "xno"; then
 		AC_MSG_CHECKING([for D-Bus])
 		if "$PKGCONFIG" dbus-1; then
+			AC_MSG_RESULT([yes])
 			DBUS_CFLAGS=`"$PKGCONFIG" --cflags dbus-1`
 			DBUS_LIBS=`"$PKGCONFIG" --libs dbus-1`
 			save_CFLAGS="$CFLAGS"
@@ -1526,7 +1527,7 @@ if test "x$enable_dbus" != "xno"; then
 			     #include <dbus/dbus.h>],
 			    [return dbus_connection_read_write(NULL, 0);],
 			    [
-				AC_MSG_RESULT([ye]s)
+				AC_MSG_RESULT([yes])
 				AC_DEFINE(PCAP_SUPPORT_DBUS, 1, [support D-Bus sniffing])
 				DBUS_SRC=pcap-dbus.c
 				V_INCLS="$V_INCLS $DBUS_CFLAGS"
