Use AC_OUTPUT_COMMANDS() for the "make depend", as we do in tcpdump.

--- a/configure.in
+++ b/configure.in
@@ -1572,14 +1572,13 @@ AC_PROG_INSTALL
 
 AC_CONFIG_HEADER(config.h)
 
+AC_OUTPUT_COMMANDS([if test -f .devel; then
+	make depend
+fi])
 AC_OUTPUT(Makefile pcap-filter.manmisc pcap-linktype.manmisc
 	pcap-tstamp.manmisc pcap-savefile.manfile pcap.3pcap
 	pcap_compile.3pcap pcap_datalink.3pcap pcap_dump_open.3pcap
 	pcap_list_datalinks.3pcap pcap_list_tstamp_types.3pcap
 	pcap_open_dead.3pcap pcap_open_offline.3pcap
 	pcap_set_tstamp_type.3pcap)
-
-if test -f .devel ; then
-	make depend
-fi
 exit 0
