--- a/Makefile-devel-adds
+++ b/Makefile-devel-adds
@@ -2,7 +2,7 @@
 # Auto-regenerate configure script or Makefile when things change.
 # From autoconf.info .  Works best with GNU Make.
 #
-${srcdir}/configure: configure.in
+${srcdir}/configure: configure.in aclocal.m4
 	cd ${srcdir} && autoconf
 
 # autoheader might not change config.h.in, so touch a stamp file.
