Make timestamps precision configurable
Two new functions are introduced, pcap_set_tstamp_precision() and
pcap_get_tstamp_precision(). Those functions allow one to specify
desired timestamps precision for captured packets. By default
application will obtain timestamps in microseconds.

--- a/configure.in
+++ b/configure.in
@@ -503,6 +503,16 @@ linux)
 		fi
 	fi
 
+	# Do we have support for nanosecond timestamps in kernel?
+	AC_MSG_CHECKING(whether the system supports timestamps with nanosecond resolution)
+	AC_TRY_COMPILE([
+		#include <linux/sockios.h>
+		#include <linux/net.h>],
+		[return SIOCGSTAMPNS && SO_TIMESTAMPNS],
+		[AC_MSG_RESULT(yes)
+			AC_DEFINE([HAVE_LINUX_TSTAMP_NANO], 1, [define if we can use nanosecond timestamps])],
+		AC_MSG_RESULT(no))
+
 	AC_CHECK_HEADERS(linux/ethtool.h,,,
 	    [
 AC_INCLUDES_DEFAULT
