Avoid some warnings from Sun C.
Some versions of Sun C support __attribute__ but don't support the
"unused" or "format" attributes - they don't fail, but they whine a lot.
Check whether they can be used without warnings, and use them only if
they can.

--- a/configure.in
+++ b/configure.in
@@ -26,6 +26,10 @@ AC_LBL_C_INIT(V_CCOPT, V_INCLS)
 AC_LBL_SHLIBS_INIT
 AC_LBL_C_INLINE
 AC_C___ATTRIBUTE__
+if test "$ac_cv___attribute__" = "yes"; then
+	AC_C___ATTRIBUTE___UNUSED
+	AC_C___ATTRIBUTE___FORMAT
+fi
 
 AC_CHECK_HEADERS(sys/bitypes.h)
 
