Just return PCAP_ERROR_NOT_ACTIVATED for some calls.
Return PCAP_ERROR_NOT_ACTIVATED, not PCAP_ERROR (-1), for calls to
pcap_datalink(), pcap_datalink_ext(), and pcap_list_datalinks() if
called on a non-activated pcap_t.  Pre-pcap_create() code will never see
PCAP_ERROR_NOT_ACTIVATED, and code using pcap_create() will either not
see it (if it's correct) or is already getting bogus results (if it's
not correct).

Document that while we're at it.

--- a/pcap_datalink.3pcap.in
+++ b/pcap_datalink.3pcap.in
@@ -37,5 +37,15 @@ int pcap_datalink(pcap_t *p);
 returns the link-layer header type for the live capture or ``savefile''
 specified by
 .IR p .
+.PP
+It must not be called on a pcap descriptor created by
+.B pcap_create()
+that has not yet been activated by
+.BR pcap_activate() .
+.SH RETURN VALUE
+.B pcap_datalink()
+returns the link-layer header type on success and
+.B PCAP_ERROR_NOT_ACTIVATED
+if called on a capture handle that has been created but not activated.
 .SH SEE ALSO
 pcap(3PCAP), pcap-linktype(@MAN_MISC_INFO@)
