--- a/Makefile.in
+++ b/Makefile.in
@@ -166,9 +166,7 @@ MAN3PCAP_EXPAND = \
 	pcap_list_tstamp_types.3pcap.in \
 	pcap_open_dead.3pcap.in \
 	pcap_open_offline.3pcap.in \
-	pcap_set_tstamp_type.3pcap.in \
-	pcap_set_tstamp_precision.3pcap.in \
-	pcap_get_tstamp_precision.3pcap.in
+	pcap_set_tstamp_type.3pcap.in
 
 MAN3PCAP_NOEXPAND = \
 	pcap_activate.3pcap \
