--- a/configure.in
+++ b/configure.in
@@ -1583,8 +1583,8 @@ fi])
 AC_OUTPUT(Makefile pcap-filter.manmisc pcap-linktype.manmisc
 	pcap-tstamp.manmisc pcap-savefile.manfile pcap.3pcap
 	pcap_compile.3pcap pcap_datalink.3pcap pcap_dump_open.3pcap
-	pcap_list_datalinks.3pcap pcap_list_tstamp_types.3pcap
-	pcap_open_dead.3pcap pcap_open_offline.3pcap
-	pcap_set_tstamp_type.3pcap pcap_set_tstamp_precision.3pcap
-	pcap_get_tstamp_precision.3pcap)
+	pcap_get_tstamp_precision.3pcap pcap_list_datalinks.3pcap
+	pcap_list_tstamp_types.3pcap pcap_open_dead.3pcap
+	pcap_open_offline.3pcap pcap_set_tstamp_precision.3pcap
+	pcap_set_tstamp_type.3pcap)
 exit 0
